--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html class="no-js">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -20,7 +20,7 @@
     <body>
 
         <div id="balloon" class="soaring"></div>
-        <div id="language-switcher" class="cloud cloud-1"><a href="/" title="Hy">Hy semua</a></div>
+        <div id="language-switcher" class="cloud cloud-1"><a href="/" title="Hy">Good day</a></div>
 
         <header>
             <div id="ribbon">
@@ -30,63 +30,71 @@
                 <div class="subtitle year">2020</div>
             </div>
         </header>
-
         <nav>
             <ul>
-                <li><a href="#zone-beginning" title="The Beginning">1</a></li>
-                <li><a href="#zone-meeting" title="The Meeting">2</a></li>
-                <li><a href="#zone-in-love" title="In Love">3</a></li>
-                <li><a href="#zone-storm" title="Parting">4</a></li>
-                <li><a href="#zone-move-in" title="Move In">5</a></li>
-                <li><a href="#zone-proposal" title="Proposal">6</a></li>
-                <li><a href="#zone-marriage" title="Marriage">7</a></li>
+                <li class=""><a href="#zone-beginning" title="The Beginning">1</a></li>
+                <li class=""><a href="#zone-meeting" title="The Meeting">2</a></li>
+                <li class=""><a href="#zone-in-love" title="In Love">3</a></li>
+                <li class=""><a href="#zone-proposal" title="Proposal">4</a></li>
+                <li class=""><a href="#zone-storm" title="Parting">5</a></li>
+                <li class=""><a href="#zone-move-in" title="Move In">6</a></li>
+                <li class=""><a href="#zone-marriage" title="Marriage">7</a></li>
+                <li class=""><a href="#zone-blank" title="Sorry">8</a></li>
             </ul>
         </nav>
-
         <div id="zone-beginning" class="moment first">
             <p class="scroll-hint">Scroll down</p>
-            <p class="right"><strong>Umhhh!</strong>Kami sendiri tidak mengerti ini semua bisa terjadi...</p>
+            <p class="right">
+                <strong>Hay</strong>Kisah yang ditentukan allah untuk kami sangatlah menarik...
+            </p>
         </div>
 
         <div id="zone-meeting" class="moment">
-            <p class="left"><strong>Oh, that summer 2006</strong>Parties and rock-and-roll every single night <span title="sometimes they did">(when our parents let us)</span>.</p>
+            <p class="left"><strong>Dari tidak saling kenal</strong>Disuatu workshop kami dipertemukan, Gandhi sebagai pembawa materi, dan Anis salah satu pesertanya .</p>
+            <p class="right"><strong>Hingga mulai berteman</strong>Semenjak saat itu, kami mulai dekat dan saling berkomunikasi, dari yang awalnya hanya menanyakan perihal pekerjaan, hingga akhirnya saling menceritakan keluh kesah.</p>
             <div id="the-meeting"></div>
         </div>
 
         <div id="zone-in-love" class="moment">
-            <p class="right"><strong>It became clear in autumn that</strong><span title="The winter was coming...">Two can live through the winter with love like this.</span></p>
-            <div id="lovers" class="left"></div>
+            <p class="left"><strong>Lalu rasa yakin datang</strong><span >
+                Kedekatan itu membuat Gandhi pun memantapkan pandangannya, dan memilih Anis sebagai Wanita pendamping hidupnya.
+            </span></p>
+            <div id="fall-right"></div>
+        </div>
+
+        <div id="zone-proposal" class="moment">
+            <p class="right"><strong>Bismillah</strong>Hati sudah memantapkan pilihan, Gandhi memperjuangkan kemantapan hatinya dengan menemui orang tua Anis, Dan mengatakan Tujuannya : Yaitu meminta izin untuk Menikahi anak mereka (Anis).</p>
+            <div id="proposal-island"></div>
         </div>
 
         <div id="zone-storm" class="moment bad">
-            <p class="left"><strong>But not separately in 2009</strong>When Julia had to spend a semester in Moscow.</p>
-            <p class="right"><strong>That was the moment of silence</strong>We clearly saw we should never be apart.</p>
-
+            <p class="left"><strong>Kendala muncul</strong>Padahal rencana - rencana indah sudah disusun.</p>
+            <p class="right"><strong>Corona</strong>Iya, engkau mengambil peran dalam kisah kami ini.</p>
             <div class="dark-cloud dark-cloud-1 left"></div>
             <div class="dark-cloud dark-cloud-2 left"></div>
             <div class="dark-cloud dark-cloud-3 right"></div>
             <div class="lightning"></div>
         </div>
-
         <div id="zone-move-in" class="moment">
-            <p class="left"><strong>So we moved in instead</strong>To fill the house with love, support and Apple’s computers.</p>
-            <div id="house-island"></div>
+            <p class="left"><strong>Alhamdulillah</strong>Keadaan mulai membaik, New Normal diberlakukan, Dan Kami langsung menyusun ulang rencana terbaik untuk hubungan kami.</p>
+            <div id="fall-right"></div>
         </div>
-
-        <div id="zone-proposal" class="moment">
-            <p class="right"><strong>One year later, in Thailand</strong>Artem offered her to never stop the fun.</p>
-            <div id="proposal-island"></div>
-        </div>
-
         <div id="zone-marriage" class="moment">
-            <p class="left"><strong title="Hint: Julia wears a white dress!">You must have already guessed!</strong>Our wedding is taking place on 21st of June 2013. Such great news, yep?;-)</p>
-            <div id="slowpoke" class="soaring"></div>
+            <p class="left"><strong >Yap, Ini rencana kami !</strong>
+            Kami akan melakukan pernikahan pada tanggal 9 Agustus 2020.<br>
+            Mohon doa terbaiknya ya.<br>
+            Terimakasih</p>
+            <p class="right"><strong >TAPIIII !</strong>
+            Karena anjuran PSBB maka kami mohon maaf yang sebesar - besarnya, karena tidak bisa mengundang teman-teman dalam acara kami ini.<br>
+            Atas perhatiannya, kami ucapkan terimakasih banyak.
+            </p>
         </div>
-
+        <div id="zone-blank" class="moment">
+        </div>
         <footer>
             <div id="the-cake"></div>
             <div id="party"></div>
-            <p>Design by <a href="https://madebyjulia.com" title="Julia’s website">the bride</a>, programming by <a href="https://temochka.com" title="Artem’s website">the groom</a>.</p>
+            <p>Design by <a href="https://madebyjulia.com" title="Julia’s website">Julia’s</a>, programming by <a href="https://temochka.com" title="Artem’s website">Artem’s</a>.</p>
         </footer>
         <script src="js/vendor/jquery-1.9.1.min.js"></script>
         <script src="js/plugins.js"></script>
